# tpm2-tss-engine

./: .gitignore  .lgtm.yml  .project  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile.am  README.md  RELEASE.md  configure.ac  openssl.conf.sample
.ci/: ci-runner.sh  coverity.run  docker.run  get_deps.sh
.github/workflows/: codeql.yml  docker.yml  main.yml  whitespace.yml
bash-completion/: tpm2tss-genkey
include/: tpm2-tss-engine.h
man/: tpm2tss-genkey.1.md  tpm2tss_ecc_genkey.3.md  tpm2tss_ecc_getappdata.3.md  tpm2tss_ecc_makekey.3.md  tpm2tss_rsa_genkey.3.md  tpm2tss_rsa_makekey.3.md  tpm2tss_tpm2data_write.3.md
src/: tpm2-tss-engine-ciphers.c  tpm2-tss-engine-common.c  tpm2-tss-engine-common.h  tpm2-tss-engine-digest-sign.c  tpm2-tss-engine-digest.c  tpm2-tss-engine-ecc.c  tpm2-tss-engine-err.c  tpm2-tss-engine-err.h  tpm2-tss-engine-pmeth.c  tpm2-tss-engine-pmeth.h  tpm2-tss-engine-rand.c  tpm2-tss-engine-rsa-pmeth.c  tpm2-tss-engine-rsa.c  tpm2-tss-engine-tcti.c  tpm2-tss-engine.c  tpm2tss-genkey.c
test/: ciphers.sh  ecdh.sh  ecdsa-emptyauth.sh  ecdsa-handle-flush.sh  ecdsa-restricted.sh  ecdsa.sh  error_tpm2-tss-engine-common.c  failload.sh  failwrite.sh  neg-handle.pem  rand.sh  rsadecrypt.sh  rsadecrypt_genpkey.sh  rsasign.sh  rsasign_genpkey.sh  rsasign_hexpass.sh  rsasign_importtpm.sh  rsasign_importtpmparent.sh  rsasign_parent.sh  rsasign_parent_hexpass.sh  rsasign_parent_pass.sh  rsasign_parent_strhexpass.sh  rsasign_parent_strstrpass.sh  rsasign_persistent.sh  rsasign_persistent_emptyauth.sh  rsasign_restricted.sh  rsasign_strhexpass.sh  rsasign_strstrpass.sh  sclient.sh  sh_log_compiler.sh  sm2_csr.sh  sm2sign.sh  sm2sign_emptyauth.sh  sm2sign_handle_flush.sh  sm2sign_importtpmparent.sh  sm2sign_parent.sh  sserver.sh  tpm2-tss-engine-common.c
